src/unit_tests/Custom/type_checker/success/let4.cl
class Main {
    main() : Int {
        {
            let x : Int in let x : Int <- x + 1 in 5;
            1;
        }
    };
};