src/unit_tests/Custom/type_checker/fail/let-ord.cl
class Main inherits IO {
    main(): Int {
        {
            let x:Int <- y, y: Int in 5;
            1;
        }
    };
};